ocp/minio-ml-workshop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-ml-workshop
  labels:
    component: minio
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: minio
  template:
    metadata:
      labels:
        component: minio
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio
      - name: config
        emptyDir: {}
      containers:
      - name: minio
        image: quay.io/eformat/mlminio:latest
        imagePullPolicy: IfNotPresent
        resources: {}
        args:
        - server
        - /storage
        - --config-dir=/config
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: storage
          mountPath: "/storage"
        - name: config
          mountPath: "/config"

---
apiVersion: v1
kind: Service
metadata:
  name: minio-ml-workshop
  labels:
    component: minio
spec:
  ports:
    - port: 9000
      protocol: TCP
  selector:
    component: minio

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio
  labels:
    component: minio
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: null
  subdomain: ''
  to:
    kind: Service
    name: minio-ml-workshop
    weight: 100
  port:
    targetPort: 9000
  wildcardPolicy: None
